[package]
name = "post"
version = "0.0.1"
authors = ["Tshepang Lekhonkhobe <tshepang@gmail.com>"]
edition = "2018"
rust-version = "1.54"

[dependencies]
anyhow = "1"
dirs-next = "2"
slug = "0.1"

[dependencies.clap]
version = "3"
features = [
  "derive",
]

[dependencies.time]
version = "0.3"
features = [
  "formatting",
  "local-offset",
]
