[package]
name = "post"
version = "0.0.5"
authors = ["Tshepang Mbambo <hopsi@tuta.io>"]
edition = "2021"
rust-version = "1.64"

[dependencies]
anyhow = "1"
slug = "0.1"

[dependencies.clap]
version = "4"
features = [
  "derive",
]

[dependencies.time]
version = "0.3"
features = [
  "formatting",
  "local-offset",
]
